--- a/UC.html
+++ b/UC.html
@@ -14,7 +14,7 @@
     <h3>Temperature Converter</h3>
     <input type="text" name="val" id="i1" oninput="convdn(0)">
     <select name="unit" id="u1" onchange="convup(0)">
-        <option value="0">Celcius (&#176C)</option>
+        <option value="0">Celsius (&#176C)</option>
         <option value="1">Fahrenheit (&#176F)</option>
         <option value="2">Kelvin (&#176K)</option>
         <option value="3">Reaumur (&#176R)</option>
@@ -23,7 +23,7 @@
     <br><br>
     <input type="text" name="val" id="i2" oninput="convup(0)">
     <select name="unit" id="u2" onchange="convdn(0)">
-        <option value="0">Celcius (&#176C)</option>
+        <option value="0">Celsius (&#176C)</option>
         <option value="1">Fahrenheit (&#176F)</option>
         <option value="2">Kelvin (&#176K)</option>
         <option value="3">Reaumur (&#176R)</option>
